Added -Xverify:none which seems to be required for newer Mac M1 laptops.